--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="top">
-	<div class="w">
+	<div class="topw">
 		<div class="topsz">
 			<span>送至：北京</span>
 			<div class="top_icons" id="top_icons">
@@ -343,22 +343,22 @@
 	<!-- 今日推荐 start-->
 <div class="todays">
 	<div class="todaystj"></div>
-	<div class="fore1">
+	<div class="todaysfore1">
 		<a href="javascript:;">
 			<img src="./image/56dff772Nf24d2ba9.jpg" alt="">
 		</a>
 	</div>
-	<div class="fore1">
+	<div class="todaysfore1">
 		<a href="javascript:;">
 			<img src="./image/56d80864Nee92dddd.jpg" alt="">
 		</a>
 	</div>
-	<div class="fore1">
+	<div class="todaysfore1">
 		<a href="javascript:;">
 			<img src="./image/56dfe2fbN404ca84f.jpg" alt="">
 		</a>
 	</div>
-	<div class="fore1">
+	<div class="todaysfore1">
 		<a href="javascript:;">
 			<img src="./image/56e12758Nc74414f7.jpg" alt="">
 		</a>
@@ -2647,7 +2647,7 @@
 		</div>
 		<div style="display: block;" class="floor10main">
 			<div class="main-inner">
-				<ul class="floor10main-body2">
+				<ul class="floor11main-body2">
 					
 					<li class="floor10fore1">
 						<a target="_blank" href="javascript:;">
@@ -2729,7 +2729,7 @@
 		</div>
 		<div style="display: block;" class="floor11main">
 			<div class="main-inner">
-				<ul class="floor10main-body2">
+				<ul class="floor11main-body2">
 					
 					<li class="floor10fore1" id='right'>
 						<a target="_blank" href="javascript:;">
@@ -2922,11 +2922,136 @@
 	</div>
 		</div>
 
-		<div class='specialshare'>
-			
+		<div class='specialshare' id='specialshare'>
+			<div class="mt">
+				<h2>热门晒单</h2>
+			</div>
+			<div class='mc'>
+				<div class='sw'>
+					<ul>
+						<li>
+							<div class="p-img">
+				<a href="javascript:;" target="_blank">
+				<img src="./image/12f/55407fcaNd211fa19.jpg" alt="本来想买黑色，女朋友给的意见买的金色。还是挺好看的，我本人也不喜欢5.5寸的大屏手机，这个大小很合适。" height="80" width="80"></a>
+				</div>
+				<div class="p-info">
+				<div class="author-info">
+					<img title="jd_159721qsz" src="./image/12f/55407fcaNd211fa19.jpg" alt="jd_159721qsz" height="28" width="28">
+					<span>jd_159721qsz</span>
+				</div>
+				<div class="p-detail">
+					<a target="_blank" title="本来想买黑色，女朋友给的意见买的金色。还是挺好看的，我本人也不喜欢5.5寸的大屏手机，这个大小很合适。" href="javascript:;">本来想买黑色，女朋友给的意见买……
+					<span class="icon-r">”</span></a>
+					<span class="detail-arrow">◆</span>
+					<span class="icon-l">“</span>
+				</div>
+			</div>
+						</li>
+						<li>
+							<div class="p-img">
+				<a href="javascript:;" target="_blank">
+				<img src="./image/12f/55407fcaNd211fa19.jpg" alt="本来想买黑色，女朋友给的意见买的金色。还是挺好看的，我本人也不喜欢5.5寸的大屏手机，这个大小很合适。" height="80" width="80"></a>
+				</div>
+				<div class="p-info">
+				<div class="author-info">
+					<img title="jd_159721qsz" src="./image/12f/55407fcaNd211fa19.jpg" alt="jd_159721qsz" height="28" width="28">
+					<span>jd_159721qsz</span>
+				</div>
+				<div class="p-detail">
+					<a target="_blank" title="本来想买黑色，女朋友给的意见买的金色。还是挺好看的，我本人也不喜欢5.5寸的大屏手机，这个大小很合适。" href="javascript:;">本来想买黑色，女朋友给的意见买……
+					<span class="icon-r">”</span></a>
+					<span class="detail-arrow">◆</span>
+					<span class="icon-l">“</span>
+				</div>
+			</div>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</div>
 
 
 	</div>
+	<!-- bottom -->
+	<div id="service-2014">
+	<div class="slogen">
+		<span class="item fore1">
+			<i></i><b>多</b>品类齐全，轻松购物
+		</span>
+		<span class="item fore2">
+			<i></i><b>快</b>多仓直发，极速配送
+		</span>
+		<span class="item fore3">
+			<i></i><b>好</b>正品行货，精致服务
+		</span>
+		<span class="item fore4">
+			<i></i><b>省</b>天天低价，畅选无忧
+		</span>
+	</div>
+	<div class="w">
+		<dl class="fore1">
+			<dt>购物指南</dt>
+			<dd>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">购物流程</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">会员介绍</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">生活旅行/团购</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">常见问题</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">大家电</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">联系客服</a></div>
+			</dd>
+		</dl>
+		<dl class="fore2">		
+			<dt>配送方式</dt>
+			<dd>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">上门自提</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">211限时达</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">配送服务查询</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">配送费收取标准</a></div>				
+				<div><a target="_blank" href="javascript:;">海外配送</a></div>
+			</dd>
+		</dl>
+		<dl class="fore3">
+			<dt>支付方式</dt>
+			<dd>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">货到付款</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">在线支付</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">分期付款</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">邮局汇款</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">公司转账</a></div>
+			</dd>
+		</dl>
+		<dl class="fore4">		
+			<dt>售后服务</dt>
+			<dd>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">售后政策</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">价格保护</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">退款说明</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">返修/退换货</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">取消订单</a></div>
+			</dd>
+		</dl>
+		<dl class="fore5">
+			<dt>特色服务</dt>
+			<dd>		
+				<div><a target="_blank" href="javascript:;">夺宝岛</a></div>
+				<div><a target="_blank" href="javascript:;">DIY装机</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">延保服务</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">京东E卡</a></div>				
+				<div><a rel="nofollow" target="_blank" href="javascript:;">京东通信</a></div>
+				<div><a rel="nofollow" target="_blank" href="javascript:;">京东JD+</a></div>
+			</dd>
+		</dl>
+		<div id="coverage">
+			<div class="dt">
+				京东自营覆盖区县
+			</div>
+			<div class="dd">
+				<p>京东已向全国2433个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+				<p class="ar"><a target="_blank" href="javascript:;">查看详情&nbsp;&gt;</a></p>
+			</div>
+		</div>
+		<span class="clr"></span>
+	</div>
+</div>
 </body>
 </html>
