--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>jingdong</title>
 	<link rel="stylesheet" href="./css/index.css">
+	<script type='text/javascript' src='./js/function.js'></script>
+	<script type='text/javascript' src='./js/animate.js'></script>
+	<script type='text/javascript' src='./js/index.js'></script>
 </head>
 <body>
 <div class="top">
@@ -215,8 +218,11 @@
 			<a href="#">
 				<img src="./image/banner/banner3.jpg" alt="" >
 			</a>
-			<!-- <a href="#">
-				<img src="./image/banner/banner2.jpg" alt="">
+			<a href="#">
+				<img src="./image/banner/banner4.jpg" alt="">
+			</a>
+			<a href="#">
+				<img src="./image/banner/banner5.jpg" alt="">
 			</a>
 			<a href="#">
 				<img src="./image/banner/banner3.jpg" alt="">
@@ -228,14 +234,11 @@
 				<img src="./image/banner/banner5.jpg" alt="">
 			</a>
 			<a href="#">
-				<img src="./image/banner/banner6.jpg" alt="">
+				<img src="./image/banner/banner3.jpg" alt="">
 			</a>
 			<a href="#">
-				<img src="./image/banner/banner7.jpg" alt="">
+				<img src="./image/banner/banner4.jpg" alt="">
 			</a>
-			<a href="#">
-				<img src="./image/banner/banner8.jpg" alt="">
-			</a> -->
 			<div class='btns'>
 				<div class='btn'id='btn-left'>
 				</div>
@@ -243,14 +246,14 @@
 				</div>
 			</div>
 			<ul class='tab'>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
-				<li class='hots'></li>
+				<li class='hots'>1</li>
+				<li class='hots'>2</li>
+				<li class='hots'>3</li>
+				<li class='hots'>4</li>
+				<li class='hots'>5</li>
+				<li class='hots'>6</li>
+				<li class='hots'>7</li>
+				<li class='hots'>8</li>
 			</ul>
 		</div>
   <div class="bannernews">
@@ -1578,6 +1581,12 @@
                         	</a>
                         </li>
 					</ul>
+				<div class='btns6f'>
+					<div class='btn'id='btn-left6f'>
+					</div>
+					<div class='btn' id='btn-right6f'>
+					</div>
+				</div>
 			</div>
 	</div>
 	<div class="slider-nav">
@@ -1793,6 +1802,12 @@
                         	</a>
                         </li>
 					</ul>
+					<div class='btns7f'>
+					<div class='btn'id='btn-left7f'>
+					</div>
+					<div class='btn' id='btn-right7f'>
+					</div>
+				</div>
 			</div>
 	</div>
 	<div class="slider-nav">
@@ -2008,6 +2023,12 @@
                         	</a>
                         </li>
 					</ul>
+					<div class='btns8f'>
+					   <div class='btn'id='btn-left7f'>
+					   </div>
+					    <div class='btn' id='btn-right7f'>
+					   </div>
+				</div>
 			</div>
 	</div>
 	<div class="slider-nav">
@@ -2225,6 +2246,12 @@
                         	</a>
                         </li>
 					</ul>
+					<div class='btns9f'>
+					   <div class='btn'id='btn-left7f'>
+					   </div>
+					    <div class='btn' id='btn-right7f'>
+					   </div>
+				</div>
 			</div>
 	</div>
 	<div class="slider-nav">
@@ -2432,10 +2459,16 @@
 					<ul style="width: 2034px; height:473px; left: 0px; position: absolute;" class="slider-main">
 						<li style="float: left; display: list-item;"  class="slider-panel">
 							<a href="javascript:;" target="_blank" title="" class="floor6fore1" >
-								<img src="./image/10f/56f0dcf6N3ad428bb.jpg" height="232" width="339">
+								<img src="./image/10f/56f0dcf6N3ad428bb.jpg" height="232" width="439">
 							</a>
                         </li>
 					</ul>
+					<div class='btns10f'>
+					   <div class='btn'id='btn-left7f'>
+					   </div>
+					    <div class='btn' id='btn-right7f'>
+					   </div>
+				</div>
 			</div>
 	</div>
 	<div id="author">
@@ -3053,5 +3086,61 @@
 		<span class="clr"></span>
 	</div>
 </div>
+<!-- 版权信息 -->
+<div class="bqxx">
+    <div class="bqxxw">
+        <div class="gywm">
+            <a href="#">关于我们</a>|
+            <a href="#">联系我们</a>|
+            <a href="#">商家入驻</a>|
+            <a href="#">营销中心</a>|
+            <a href="#">手机京东</a>|
+            <a href="#">友情链接</a>|
+            <a href="#">销售联盟</a>|
+            <a href="#">京东社区</a>|
+            <a href="#">京东公益</a>|
+            <a href="#">English Site</a>|
+            <a href="#">Contact Us</a>
+
+        </div>
+         <div class="copyright">
+             <a href="#">
+                <img src="image/公安.png" alt=""> 京公网安备 11000002000088号
+             </a>&nbsp;&nbsp;|&nbsp;&nbsp;京ICP证070359号&nbsp;&nbsp;|&nbsp;&nbsp;
+              <a href="#">互联网药品信息服务资格证编号(京)-经营性-2014-0008</a>
+              &nbsp;&nbsp;|&nbsp;&nbsp;新出发京零&nbsp;字第大120007号
+               <br>
+                 <a href="#">音像制品经营许可证苏宿批005号</a>&nbsp;&nbsp;|&nbsp;&nbsp;出版物经营许可证编号新出发(苏)批字第N-012号&nbsp;&nbsp;|&nbsp;&nbsp;互联网出版许可证编号新出网证(京)字150号
+                     <br>
+                    <a href="#">网络文化经营许可证京网文[2014]2148-348号</a>&nbsp;&nbsp;违法和不良信息举报电话：4006561155&nbsp;&nbsp;Copyright&nbsp;©&nbsp;2004-2016&nbsp;&nbsp;京东JD.com&nbsp;版权所有
+                      <br>
+                       京东旗下网站：
+                       <a href="#">360TOP</a>&nbsp;&nbsp;
+                       <a href="#">拍拍网</a>&nbsp;&nbsp;
+                       <a href="#">网银在线</a>
+           </div>
+            <div class="authentication">
+                <a href="#">
+                    <img src="image/bqxx/经营备案.png" alt="">
+                </a>
+                <a href="#">
+                     <img src="image/bqxx/可信网站.png" alt="">
+                </a>
+                <a href="#">
+                      <img src="image/bqxx/网络警察.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="image/bqxx/诚信网站.png" alt="">
+                </a>
+                <a href="#">
+                    <img src="image/bqxx/中国互联网举报.jpg" alt="">
+                </a>
+                <a href="#">
+                    <img src="image/bqxx/网络举报APP下载.jpg" alt="">
+                </a>
+            </div>
+         </div>
+
+  </div>
 </body>
 </html>
