--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 	<script type='text/javascript' src='./js/index.js'></script>
 </head>
 <body>
+<ul class='jump'>
+		<li>1</li>
+		<li>2</li>
+		<li>3</li>
+		<li>4</li>
+		<li>5</li>
+		<li>6</li>
+		<li>7</li>
+		<li>8</li>
+		<li>9</li>
+		<li>10</li>
+		<li>11</li>
+	 </ul>
+	 <div class='backs'>
+	 	<div class='back'>
+	 	
+	 </div>
+	 </div>
 <div class="top">
 	<div class="topw">
 		<div class="topsz">
@@ -565,7 +583,7 @@
 </div>
 <!-- 楼层banner end -->
 <!-- 服装鞋包 1f start-->
-<div class="ebaq_clothes">
+<div class="ebaq_clothes floor floor1">
 	<div class="f2">
 		<h2><span>1F</span>服装鞋包</h2>
 			<ul>
@@ -748,7 +766,7 @@
 <!-- 服装鞋包 1f end-->
 <!-- 个护美妆 2f start-->
 
-<div class="ghmz">
+<div class="ghmz floor floor1">
 	<div class="f2">
 		<h2><span>2F</span>个护美妆</h2>
 			<ul>
@@ -922,7 +940,7 @@
 
 
 <!-- 手机通讯 3f-->
-<div class="lazy-clothes">
+<div class="lazy-clothes ">
 	<div class="clothes">
 		<div class="f2">
 			<h2><span>3F</span>手机通讯</h2>
@@ -2586,7 +2604,7 @@
 					<img src="./image/Blueair.jpg" alt=""></a>
 			</li>
 			<li class="brands_fore">
-				<a href="javascript:;">
+				<a href=I"javascript:;">
 				<img src="./image/飞科.png" alt=""></a>
 			</li>
 			<li class="brands_fore">
